--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "angular-cli-ghpages": "^1.0.6",
     "animate.css": "^4.1.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
